# Solana-hooks

./: Anchor.toml  README.md
programs/binary-observer/: Cargo.toml
programs/binary-observer/src/: lib.rs
programs/hooks/: Cargo.toml
programs/hooks/src/: constants.rs  errors.rs  lib.rs  states.rs
programs/hooks/src/instructions/: create_player.rs  create_tenis_player.rs
programs/octal-observer/: Cargo.toml
programs/octal-observer/src/: lib.rs
programs/publisher/: Cargo.toml
programs/publisher/src/: constants.rs  errors.rs  lib.rs  states.rs  utils.rs
programs/publisher/src/instructions/: initialize.rs  mod.rs  notify_suscribers.rs  unsuscribe.rs
programs/suscriber/: Cargo.toml
programs/suscriber/src/: lib.rs  utils.rs
programs/suscriber/src/instructions/: create_global_state.rs  mod.rs
tests/: hooks.ts
